--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
-    <title>CHIT CHAT</title>
+    <title>BRIT CHAT</title>
   </head>
   <body>
     <div id="root"></div>
